# chainsawman-api

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
src/config/: config.rs  errors.rs
src/graphql/: handler.rs  mod.rs  query.rs
src/http/: handler.rs
src/models/: devil.rs  mod.rs
src/scraper/: devil.rs
src/services/: devil.rs
