[package]
name = "chainsawman-api"
version = "0.1.0"
description = "RESTful and GraphQL API for serving Chainsaw Man data"
license = "MIT"
repository = "https://github.com/stevenhansel/chainsawman-api"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chainsawman-api"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
async-trait = "0.1.58"
axum = "0.5.17"
clap = { version = "4.0.23", features = ["derive"] }
dotenvy = "0.15.6"
duplicate = "0.4.1"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = "0.11.12"
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

